# Practica3_Digitales3

./: README.md
Codigos/: Senal_pwm_v1.c  Senal_pwm_v2.c
Codigos/1_Arduino_polling/: Lector_freq_arduino.ino  teclado.ino
Codigos/1_Arduino_polling/Prueba/: Teclado_anti.c  Teclado_anti.h  teclado_ino.ino
Codigos/1_Arduino_polling/teclado.ino/: teclado.ino.ino
Codigos/2_MicroPython_polling/Prueba/: intento.py
Codigos/2_MicroPython_polling/Prueba2/: generador de señales.py  teclado.py
Codigos/3_C_polling/: CMakeLists.txt  Senal_pwm.c  Teclado.c  Teclado.h
Codigos/3_C_polling/Pruebas/: Prueba_senal_v1.rar
Codigos/3_C_polling/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _senal__pwm_8c.html  _senal__pwm_8c.js  _senal__pwm_8c__incl.dot  _teclado_8c.html  _teclado_8c.js  _teclado_8c__incl.dot  _teclado_8h.html  _teclado_8h.js  _teclado_8h__dep__incl.dot  _teclado_8h_source.html  config__autogen_8h.html  config__autogen_8h__incl.dot  config__autogen_8h_source.html  cyw43__bus__pio__spi_8pio_8h.html  cyw43__bus__pio__spi_8pio_8h.js  cyw43__bus__pio__spi_8pio_8h__incl.dot  cyw43__bus__pio__spi_8pio_8h_source.html  dir_01f79640bf9c6b9a9dc1f05c4a65d822.html  (+67 more)
Codigos/4_C_Interrupciones/: CMakeLists.txt  Keyload.c  Teclado.c
Codigos/4_C_Interrupciones/prueba1/: CMakeLists.txt  main.c
Codigos/4_C_Interrupciones/prueba1/doxygen/html/: files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8c.html
Codigos/4_C_Interrupciones/prueba1/doxygen/html/search/: all_1.js  all_4.js  all_5.js  all_6.js  defines_0.js  defines_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js
Codigos/4_C_Interrupciones/prueba1/doxygen/latex/: files.tex  main_8c.tex  refman.tex
Codigos/5_C_Interrupciones+polly/Prueba1/: CMakeLists.txt  polling+interrupciones_7seg.c
Evidencia/: Presentación1.pptx  Senal_pwm.c
Evidencia/GeneracionPutos/: Diente_100P.txt  Grafica_puntos.xlsx  cuadrada.m  cuadrada_100P.txt  diente.m  diente.txt  puntos_sin.txt  seno.h  sin.m  sin_100P.txt  tri_100P.txt  triangular.txt  tringular.m
Material/: Links.txt
(+103 files in other folders)
